# practice

./: README.md
c/: Array.h  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  arm_test.c  base64.s  basic_func.s  build_for_android.sh  gen.c  gen.h  linkedlist.c  main.cpp  node.cpp  node.h  print.c  print.h  reverse_manipulation.c  reverse_manipulation.h  reverse_string.c
linux/kernel/: README
linux/kernel/sandbox/: Kbuild  condev.c  hello.c  memtest.c
linux/stackoverflow/: main.c
python/: build_data.py  door_toggle.py  race.py
